# Orion

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/dungeons_and_dragons/: crew.py  main.py
src/dungeons_and_dragons/config/: agents.yaml  tasks.yaml
src/dungeons_and_dragons/schemas/: character_schema.py  choice_schema.py  faction_schema.py  npc_schema.py  player_schema.py  scene_schema.py  world_schema.py
src/dungeons_and_dragons/tools/: scribe_tools.py
