[project]
name = "dungeons_and_dragons"
version = "0.1.0"
description = "dungeons_and_dragons using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
dungeons_and_dragons = "dungeons_and_dragons.main:run"
run_crew = "dungeons_and_dragons.main:run"
train = "dungeons_and_dragons.main:train"
replay = "dungeons_and_dragons.main:replay"
test = "dungeons_and_dragons.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
